--- a/wp-content/themes/wedding/package.json
+++ b/wp-content/themes/wedding/package.json
@@ -2,7 +2,7 @@
   "name": "wedding",
   "version": "1.0.0",
   "description": "project for my wedding",
-  "webroot" : "assets/javascripts",
+  "webroot": "assets/javascripts",
   "repository": {
     "type": "git",
     "url": "https://github.com/kassyn/wedding.git"
@@ -16,6 +16,7 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-cssmin": "^0.12.2",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-uglify": "^0.5.1",
     "grunt-contrib-watch": "^0.6.1"
